# Jacy

./: .gitignore  CMakeLists.txt  Jacy  README.md  compile  doc_test.cpp  index.md  jacy.sh  main.cpp  ruler_test.txt  script.sublime-workspace  script.yo  test.cpp  yocto.cpp  yoyo.sh
docs/: class.md  constants.md  descr.md  destructuring.md  dev.md  functions.md  syntax_preference.md
docs/dev_docs/: comments.md  docs_specification.md  editor.md  getting_started.md  project_structure.md  requirements.md  tests.md  variables.md
docs/dev_notes/: closures.md  compiler.md  function_compilation.md  varargs.md
docs/en_docs/: constants.md  destructuring.md  dev.md  dict.md  functions.md  getting_started.md  operator_overloading.md  range.md  syntax_preference.md  tenet.md  types.md
docs/ru_docs/: basic_types.md  comments.md  getting_started.md  variables.md
docs/spec/: index.md
docs/specification/: README.md  semis.md  types.md  variables.md
doxydoc/html/: _assign_8h.html  _assign_8h__dep__incl.dot  _assign_8h_source.html  _base_visitor_8h.html  _base_visitor_8h__dep__incl.dot  _base_visitor_8h__incl.dot  _base_visitor_8h_source.html  _block_8h.html  _block_8h__dep__incl.dot  _block_8h__incl.dot  _block_8h_source.html  _class_decl_8h.html  _class_decl_8h__dep__incl.dot  _class_decl_8h__incl.dot  _class_decl_8h_source.html  _dict_expr_8h.html  _dict_expr_8h__dep__incl.dot  _dict_expr_8h__incl.dot  _dict_expr_8h_source.html  _exception_8h.html  _exception_8h__dep__incl.dot  _exception_8h__incl.dot  _exception_8h_source.html  _expr_8h.html  _expr_8h__dep__incl.dot  _expr_8h__incl.dot  _expr_8h_source.html  _for_stmt_8h.html  _for_stmt_8h__dep__incl.dot  _for_stmt_8h__incl.dot  _for_stmt_8h_source.html  _func_call_8h.html  _func_call_8h__dep__incl.dot  _func_call_8h__incl.dot  _func_call_8h_source.html  (+405 more)
img/: Minus24Exp.ai  Yocto.ai  Yocto_0.ai
include/: Exception.h  Jacy.h  Tester.h  Yocto.h
lib/: globals.h  range.yo  world.yo
sample/: module.yo  module1.jc  module2.yo  script.jc  script.yo  syntax_test.jc
src/: BaseVisitor.h  Exception.h  Jacy.cpp  Lexer.cpp  Lexer.h  ParseTreePrinter.cpp  ParseTreePrinter.h  Parser.cpp  Parser.h  Printer.cpp  Printer.h  Tester.cpp  Token.h  Yocto.cpp  Yocto.h  main.cpp
test/: class_decl.yo  func_decl.jc  func_decl.yo  if_expr.jc  if_expr.yo  infix.jc  infix.yo  operators.yo
(+692 files in other folders)
